added file docker-compose & nginx\conf.d\default.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,46 @@
 events {}
 
 http {
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name localhost;
+        server_name eco-api.jairosoft.com www.eco-api.jairosoft.com;
 
+        return 301 https://$host$request_uri;
+    }
+
+    # SSL configuration
+    server {
+        listen 443 ssl;
+        server_name eco-api.jairosoft.com www.eco-api.jairosoft.com;
+
+        ssl_certificate /etc/letsencrypt/live/eco-api.jairosoft.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/eco-api.jairosoft.com/privkey.pem;
+
+        # Serve frontend
         location / {
-            proxy_pass http://app:8000;  # Replace "app" with your backend service name
+            proxy_pass http://54.234.31.75:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # API requests to backend
+        location /api/ {
+            proxy_pass http://54.234.31.75:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # WebSocket support (if needed)
+        location /ws/ {
+            proxy_pass http://54.234.31.75:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
         }
     }
 }
