--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,7 @@ http {
         }
     }
 
+
     # SSL Configuration for HTTPS
     server {
         listen 443 ssl;
@@ -25,14 +26,26 @@ http {
         ssl_certificate /etc/letsencrypt/live/jairosoft.dev/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/jairosoft.dev/privkey.pem;
 
-        # SSL Settings
+        # Stronger SSL security settings
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:AES128-GCM-SHA256';
         ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # HSTS (forces HTTPS)
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+        # Additional security headers
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
 
         # Serve frontend
         location / {
-            proxy_pass http://54.234.31.75:3000; # Replace with your actual frontend server's IP or domain
+            proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -41,22 +54,36 @@ http {
 
         # API requests to backend
         location /api/ {
-            proxy_pass http://54.234.31.75:8000; # Replace with your backend server's IP or domain
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # WebSocket support (if needed)
+        # WebSocket support (fix connection headers)
         location /ws/ {
-            proxy_pass http://54.234.31.75:8000; # WebSocket server
+            proxy_pass http://backend:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 
-    # Optionally, include other files or configurations from `conf.d`
-    include /etc/nginx/conf.d/*.conf;
+    # Local development support
+    server {
+        listen 80;
+
+        location /api/ {
+            proxy_pass http://backend:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+      }
+
 }
