--- a/nginx.conf
+++ b/nginx.conf
@@ -33,12 +33,14 @@ http {
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
 
-        # HSTS (forces HTTPS)
+              # HSTS (forces HTTPS)
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         # Additional security headers
-        add_header X-Frame-Options DENY;
+        #add_header X-Frame-Options DENY;
         add_header X-Content-Type-Options nosniff;
+        #add_header X-Frame-Options "ALLOW-FROM https://bubble.io https://thymeandtell.com" always;
+        #add_header Content-Security-Policy "frame-ancestors 'self' https://bubble.io https://thymeandtell.com;" always;
 
         # Serve frontend
         location / {
@@ -50,6 +52,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Content-Security-Policy "frame-ancestors 'self' https://bubble.io https://app.thymeandtell.com";
         }
 
         # API requests to backend
